--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@angular/platform-browser": "~9.0.6",
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.5.4",
+    "socket.io": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
